[metadata]
name = lightroom
version = 0.0.1
author = Lou Kratz
author-email = inbound at lou.dev
home-page = https://github.com/lou-k/lightroom-cc-api
description = "An implementation of Adobe's Creative Cloud Lightroom API."
license = GPLv3
license-file = LICENSE
platform = any
keywords = lightroom adobe creative-cloud
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Documentation = https://github.com/lou-k/lightroom-cc-api/blob/main/README.md
    Bug Tracker = https://github.com/lou-k/lightroom-cc-api/issues
    Changelog = https://github.com/lou-k/lightroom-cc-api/commits/main


[options]
packages = lightroom
install_requires =
    requests>=2.22.0
    python-magic>=0.4.18
    tqdm>=4.47.0

[options.entry_points]
console_scripts =
    lightroom-sync = lightroom:sync.sync